<resources>
    <string name="app_name">Instagrammo</string>
    <string name="title_activity_bottom_view">BottomViewActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="textLogin">Login</string>
    <string name="ricorda_credenziali_schermata_login">Ricorda credenziali</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="Home">Home</string>
    <string name="search_bottomNavigationMenu">Search</string>
    <string name="add_bottomNavigationMenu">Add</string>
    <string name="follow_bottomNavigationMenu">Follow</string>
    <string name="profile_bottomNavigationMenu">Profile</string>
    <string name="modifica_profilo_salva">Salva</string>
    <string name="modifica_profilo_descrizione">Descrizione:</string>
    <string name="modifica_profilo_aggiungi_descrizione">Aggiungi una descrizione</string>
    <string name="nome_utente">Nome utente</string>
    <string name="modifica_profilo_nome_profilo">Nome profilo:</string>
    <string name="modifica_profilo_id_immagine">Id immagine</string>
    <string name="modifica_profilo">Modifica profilo</string>
    <string name="inserisci_l_id_dell_immagine">Inserisci l\'ID dell\'immagine</string>
    <string name="check_image">Check Image</string>
    <string name="app_title">Instagrammo</string>
    <string name="add_post">Aggiungi Post</string>
    <string name="conferma_aggiunta_post">Conferma Aggiunta Post</string>
    <string name="descrizione_post">Descrizione</string>
    <string name="conferma_post">Conferma</string>
    <string name="remember_me">Remember Me</string>
    <string name="instagrammo_header">Instagrammo</string>
    <string name="default_notification_application_id">com.ggwp.instagrammo</string>
    <string name="modifica">modifica</string>
    <string name="num_posts">num posts</string>
    <string name="posts">Posts:</string>
    <string name="num_friends">num friends</string>
    <string name="amici">Amici:</string>
</resources>
