<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
       android:id="@+id/home"
       android:icon="@drawable/ic_home"
       android:title="@string/Home" />
    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_bottomNavigationMenu" />
    <item
        android:id="@+id/Add"
        android:icon="@drawable/ic_add_circle"
        android:title="@string/add_bottomNavigationMenu" />

    <item
        android:id="@+id/favourite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/follow_bottomNavigationMenu" />

    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_person_"
        android:title="@string/profile_bottomNavigationMenu" />

</menu>