<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <com.example.view.custom_view.CustomView
        android:id="@+id/custView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        custom:button="@drawable/back_arrow"
        custom:title="@string/conferma_aggiunta_post"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageConfermaPost"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/custView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/descPost"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/modifica_profilo_descrizione"
        app:layout_constraintTop_toBottomOf="@id/imageConfermaPost"
        app:layout_constraintLeft_toLeftOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descPost" />



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/conferma_post"
        android:fontFamily="@font/abeezee_italic"
        android:textColor="@color/design_default_color_on_primary"
        android:background="@color/celeste"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>